# dataAnnotation

./: .gitignore  tree_output.txt
asm/jun-13/: hello.asm  original.asm  respA.asm  respB.asm
c/atoi-security/: main-A.c  main-B.c  main.c
chromeExtensions/6-26-2024/: background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  webpack.config.js
flutterDesktop/Jun13/: CMakeLists.txt  main.cpp  respA.cpp  respB.cpp
go/6-21-2024-A/: main.go
go/6-21-2024-B/: main.go
go/7-9-2024/: go.mod  go.sum  main-A.go  main-B.go
java/5-20-2024/equation generator/: EquationGenerator.java  EquationGeneratorA.java  EquationGeneratorB.java
java/5-20-2024/types-of-threads/: MyDaemonThread.java  MyUserThread.java  ThreadExample1.java  ThreadExample2.java  ThreadExample3.java
java/6-14-2024/springtest/: pom.xml
java/7-10-2024/parallelized/: pom.xml
java/7-13-2024/src/: BFS.java  Main.java
java/7-13-2024/txt/: bfsdfs.txt
javascript/7-12-2024/: getData.js  index.html  main-A.js  main-B.js  main.js  package-lock.json  package.json
kotlin/composableToPng/app/: build.gradle.kts
node/7-3-2024/serverA/: package-lock.json  package.json
node/7-3-2024/serverB/: package-lock.json  serverB.js  serverB.ts
php/6-15-2024/: respA.php  respB.php
python/6-21-2024/: test_todo_A.py  test_todo_B.py  todo.py
python/7-5-2024/ircTest/: irc_test.py  tempBotA.py  tempBotB.py
python/feasibilityChecker/: improvedA.py  improvedB.py  main.py
python/stitchImages/: stitch.py
r/habits/scripts/: app.R  first_script.R  server.R
(+18 files in other folders)
